crates/tui/src/view/snapshots/tui__view__scroll_bar__tests__scroll_bar_at_the_top.snap
---
source: crates/tui/src/view/scroll_bar_tests.rs
expression: "crate::view::text(&buf)"
---
                                                ▄▄▄▄▄▄▄▄▄▄▄█
                                                 prompt 1 ▐│
                                                ▀▀▀▀▀▀▀▀▀▀▀│
                                                      00:00│
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄│
▣ completed                                                │
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
                                                ▄▄▄▄▄▄▄▄▄▄▄│
                                                 prompt 2 ▐│
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
