crates/tui/src/view/snapshots/tui__view__scroll_bar__tests__scroll_bar_in_the_middle.snap
---
source: crates/tui/src/view/scroll_bar_tests.rs
expression: "crate::view::text(&buf)"
---
                                                ▄▄▄▄▄▄▄▄▄▄▄│
                                                 prompt 8 ▐│
                                                ▀▀▀▀▀▀▀▀▀▀▀│
                                                      00:00│
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
▣ completed                                                │
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
                                                ▄▄▄▄▄▄▄▄▄▄▄│
                                                 prompt 9 ▐│
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
